# gotham-middleware-basicauth

./: .travis.yml  Cargo.toml  LICENSE  README.md
examples/basic-auth/: Cargo.toml
examples/basic-auth/src/: main.rs
examples/basic-auth/src/static/: index.html
examples/scoped-auth/: Cargo.toml
examples/scoped-auth/src/: main.rs
src/: lib.rs
tests/: test_auth.rs  test_scope.rs
