[package]
name = "gotham-middleware-basicauth"
version = "0.2.0"
authors = ["PrivateRookie <996514515@qq.com>"]
edition = "2018"
description = "http basic auth middleware for gotham framework"
readme = "./README.md"
homepage = "https://github.com/PrivateRookie/gotham-middleware-basicauth"
repository = "https://github.com/PrivateRookie/gotham-middleware-basicauth"
keywords = ["web", "http", "gotham", "middleware"]
license-file = "./LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10.1"
futures = "0.1.28"
gotham = "0.4"
hyper = "0.12.33"
mime = "0.3.13"
log = "0.4.8"

[[example]]
name = "basic-auth"
path = "examples/basic-auth/src/main.rs"

[[example]]
name = "scoped-auth"
path = "examples/scoped-auth/src/main.rs"
