[package]
name = "basic-auth-example"
version = "0.1.0"
authors = ["PrivateRookie <996514515@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.4"
gotham-middleware-basicauth = { path = "../../gotham-middleware-basicauth" }